# AnalyzeGitRepoLoc

./: .gitignore  .markdownlint.jsonc  3rdPartyLicenses.md  AGENTS.md  CHANGELOG.md  LANGUAGES.md  LICENSE  README.ja.md  README.md  analyze_git_repo_loc.py  config.doctor-sample.yml  config.yml  dev-requirements.in  dev-requirements.txt  pyproject.toml  requierments.txt  requirements.in  requirements.txt
.serena/: project.yml
Scripts/: analyze_git_repo_loc.ps1
analyze_git_repo_loc/: __init__.py  __main__.py  analysis_helpers.py  analysis_runner.py  chart_builder.py  chart_ticks.py  cli_args.py  colored_console_printer.py  doctor.py  errors.py  exclude_templates.py  git_repo_loc_analyzer.py  html_report.py  i18n.py  init_config.py  init_wizard.py  language_comment.py  language_extensions.py  markdown_summary.py  remote_auth.py  remote_catalog.py  remote_oauth.py  remote_repos.py  repo_progress.py  tui_auth.py  tui_config.py  tui_review.py  tui_selector.py  tui_state.py  tui_wizard.py  utils.py  yaml_config.py
analyze_git_repo_loc/analysis/: __init__.py  analysis_helpers.py  analysis_runner.py  (+2 more)
docs/: implementation-order.md  requirements.md
openspec/: AGENTS.md  project.md
tests/: test_analysis_helpers.py  test_chart_builder.py  test_chart_ticks.py  test_doctor.py  test_exclude_templates.py  test_git_repo_loc_analyzer.py  test_html_report.py  test_i18n.py  test_import_boundaries.py  test_init_config.py  test_progress_warnings.py  test_project_metadata.py  test_remote_repos.py  test_runtime_errors.py  test_tui_repo_selector.py  test_tui_repo_selector_state.py  test_tui_wizard.py
(+168 files in other folders)
