[project]
name = "analyze-git-repo-loc"
version = "2.2.4"
description = "Analyze Git repositories and visualize code LOC."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
  { name = "Nob Shinjo" }
]
dependencies = [
  "pandas>=2.2.3",
  "plotly>=5.24.1",
  "tqdm>=4.66.5",
  "jinja2>=3.1.4",
  "PyDriller==2.6",
  "PyYAML>=6.0.2",
  "pip-licenses>=5.0.0",
  "prompt_toolkit>=3.0.52"
]

[dependency-groups]
dev = [
  "pytest>=8.4.0"
]
