[project]
name = "analyze-git-repo-loc"
version = "3.2.0"
description = "Analyze Git repositories and visualize code LOC."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Nob Shinjo" }]
dependencies = [
"pandas>=3.0.3",
"plotly>=6.7.0",
"tqdm>=4.67.3",
"jinja2>=3.1.6",
"PyDriller>=2.9",
"PyYAML>=6.0.3",
"pip-licenses>=5.5.5",
"prompt_toolkit>=3.0.52",
"GitPython>=3.1.50",
"colorama>=0.4.6",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]
